[gd_scene load_steps=14 format=3 uid="uid://b1t2e4ov1itqn"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_t1y4w"]
[ext_resource type="Script" path="res://scripts/camera_controller.gd" id="2_fw5or"]
[ext_resource type="PackedScene" uid="uid://cew70vm6lep0v" path="res://snowboard.tscn" id="3_1y2v6"]
[ext_resource type="Shader" path="res://GPUTrail-main/shaders/trail.gdshader" id="4_mals8"]
[ext_resource type="Shader" path="res://GPUTrail-main/shaders/trail_draw_pass.gdshader" id="5_dqjfb"]
[ext_resource type="Texture2D" uid="uid://crk6pkb7e5rwc" path="res://GPUTrail-main/defaults/texture.tres" id="6_r85le"]
[ext_resource type="Texture2D" uid="uid://ct31fhxvcragr" path="res://GPUTrail-main/defaults/curve.tres" id="7_ad00e"]
[ext_resource type="Script" path="res://GPUTrail-main/GPUTrail3D.gd" id="8_gbf1x"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_0of4y"]
friction = 0.0
absorbent = true

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_2cbv1"]
radius = 24.0394
height = 188.201

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hfclc"]
shader = ExtResource("4_mals8")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uecq0"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("5_dqjfb")
shader_parameter/emmission_transform = Projection(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1)
shader_parameter/flags = 40
shader_parameter/tex = ExtResource("6_r85le")
shader_parameter/color_ramp = ExtResource("6_r85le")
shader_parameter/curve = ExtResource("7_ad00e")

[sub_resource type="QuadMesh" id="QuadMesh_7hvjp"]
material = SubResource("ShaderMaterial_uecq0")

[node name="Player" type="RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.885367, -0.87594)
axis_lock_angular_x = true
axis_lock_angular_y = true
mass = 200.0
physics_material_override = SubResource("PhysicsMaterial_0of4y")
script = ExtResource("1_t1y4w")

[node name="Collision" type="CollisionShape3D" parent="."]
transform = Transform3D(0.03, 0, 0, 0, -1.31134e-09, -0.03, 0, 0.03, -1.31134e-09, -0.130164, 0.160034, 0)
shape = SubResource("CapsuleShape3D_2cbv1")

[node name="SnowBoard" parent="." instance=ExtResource("3_1y2v6")]
transform = Transform3D(0.000523392, 1.37055e-05, 0.0299954, -0.000785308, 0.0299897, 0, -0.0299851, -0.000785188, 0.000523572, 0, 0, 0)

[node name="CameraController" type="Node3D" parent="."]
top_level = true
script = ExtResource("2_fw5or")

[node name="Mount" type="Node3D" parent="CameraController"]
transform = Transform3D(1, 0, 0, 0, 0.984762, 0.173906, 0, -0.173906, 0.984762, 0, 3.89039, 9.23437)

[node name="Camera3D" type="Camera3D" parent="CameraController/Mount"]

[node name="TrailLeft" type="GPUParticles3D" parent="."]
transform = Transform3D(-2.18557e-09, -0.05, 0, 0.05, -2.18557e-09, 0, 0, 0, 0.05, -0.506511, -0.241572, 2.24442)
amount = 20
lifetime = 20.0
explosiveness = 1.0
fixed_fps = 0
visibility_aabb = AABB(-0.965584, -0.926524, -1.26582, 1.93117, 1.85305, 2.53165)
process_material = SubResource("ShaderMaterial_hfclc")
draw_pass_1 = SubResource("QuadMesh_7hvjp")
script = ExtResource("8_gbf1x")
length = 20
color_ramp = ExtResource("6_r85le")
curve = ExtResource("7_ad00e")
_defaults_have_been_set = true

[node name="TrailRight" type="GPUParticles3D" parent="."]
transform = Transform3D(-2.18557e-09, -0.05, 0, 0.05, -2.18557e-09, 0, 0, 0, 0.05, 0.226266, -0.241572, 2.24442)
amount = 20
lifetime = 20.0
explosiveness = 1.0
fixed_fps = 0
visibility_aabb = AABB(-0.965584, -0.926524, -1.26582, 1.93117, 1.85305, 2.53165)
process_material = SubResource("ShaderMaterial_hfclc")
draw_pass_1 = SubResource("QuadMesh_7hvjp")
script = ExtResource("8_gbf1x")
length = 20
color_ramp = ExtResource("6_r85le")
curve = ExtResource("7_ad00e")
_defaults_have_been_set = true

[node name="Centre" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.118024, -0.362103, 0.0669928)
target_position = Vector3(0, -5, 0)

[node name="RearCentre" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.913545, 0.406737, 0, -0.406737, 0.913545, -0.118024, -0.343642, 2.25072)
target_position = Vector3(0, -5, 0)

[node name="RearLeft" type="RayCast3D" parent="."]
transform = Transform3D(0.913545, -0.406737, -1.20994e-08, 0.371572, 0.834565, 0.406737, -0.165435, -0.371572, 0.913545, 0.301507, -0.343642, 2.25072)
target_position = Vector3(0, -5, 0)

[node name="RearRight" type="RayCast3D" parent="."]
transform = Transform3D(0.939693, 0.34202, 5.37328e-09, -0.312451, 0.858452, 0.406737, 0.139112, -0.382207, 0.913545, -0.551763, -0.343642, 2.25072)
target_position = Vector3(0, -5, 0)

[node name="RearRight2" type="RayCast3D" parent="."]
transform = Transform3D(0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 0, 0, 1, -0.551763, -0.400413, 0.390031)
target_position = Vector3(0, -5, 0)

[node name="RearLeft2" type="RayCast3D" parent="."]
transform = Transform3D(0.913545, -0.406737, 0, 0.406737, 0.913545, 0, 0, 0, 1, 0.301507, -0.400413, 0.390031)
target_position = Vector3(0, -5, 0)

[node name="RearRight3" type="RayCast3D" parent="."]
transform = Transform3D(0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 0, 0, 1, -0.551763, -0.400413, 0.709011)
target_position = Vector3(0, -5, 0)

[node name="RearLeft3" type="RayCast3D" parent="."]
transform = Transform3D(0.913545, -0.406737, 0, 0.406737, 0.913545, 0, 0, 0, 1, 0.301507, -0.400413, 0.709011)
target_position = Vector3(0, -5, 0)

[node name="RearRight4" type="RayCast3D" parent="."]
transform = Transform3D(0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 0, 0, 1, -0.551763, -0.400413, 1.0312)
target_position = Vector3(0, -5, 0)

[node name="RearLeft4" type="RayCast3D" parent="."]
transform = Transform3D(0.913545, -0.406737, 0, 0.406737, 0.913545, 0, 0, 0, 1, 0.301507, -0.400413, 1.0312)
target_position = Vector3(0, -5, 0)

[node name="RearRight5" type="RayCast3D" parent="."]
transform = Transform3D(0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 0, 0, 1, -0.551763, -0.400413, 1.36192)
target_position = Vector3(0, -5, 0)

[node name="RearLeft5" type="RayCast3D" parent="."]
transform = Transform3D(0.913545, -0.406737, 0, 0.406737, 0.913545, 0, 0, 0, 1, 0.301507, -0.400413, 1.36192)
target_position = Vector3(0, -5, 0)

[node name="RearRight6" type="RayCast3D" parent="."]
transform = Transform3D(0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 0, 0, 1, -0.551763, -0.400413, 1.68484)
target_position = Vector3(0, -5, 0)

[node name="RearLeft6" type="RayCast3D" parent="."]
transform = Transform3D(0.913545, -0.406737, 0, 0.406737, 0.913545, 0, 0, 0, 1, 0.301507, -0.400413, 1.68484)
target_position = Vector3(0, -5, 0)

[node name="RearRight7" type="RayCast3D" parent="."]
transform = Transform3D(0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 0, 0, 1, -0.551763, -0.400413, 2.00775)
target_position = Vector3(0, -5, 0)

[node name="RearLeft7" type="RayCast3D" parent="."]
transform = Transform3D(0.913545, -0.406737, 0, 0.406737, 0.913545, 0, 0, 0, 1, 0.301507, -0.400413, 2.00775)
target_position = Vector3(0, -5, 0)

[node name="ForwardCentre" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.913545, -0.406737, 0, 0.406737, 0.913545, -0.118024, -0.301063, -2.18483)
target_position = Vector3(0, -5, 0)

[node name="FrontLeft" type="RayCast3D" parent="."]
transform = Transform3D(0.913545, -0.406737, 5.7703e-09, 0.371572, 0.834565, -0.406737, 0.165435, 0.371572, 0.913545, 0.301507, -0.301063, -2.18483)
target_position = Vector3(0, -5, 0)

[node name="FrontRight" type="RayCast3D" parent="."]
transform = Transform3D(0.939693, 0.34202, -7.25378e-09, -0.312451, 0.858452, -0.406737, -0.139112, 0.382207, 0.913545, -0.551763, -0.301063, -2.18483)
target_position = Vector3(0, -5, 0)

[node name="FrontLeft2" type="RayCast3D" parent="."]
transform = Transform3D(0.913545, -0.406737, 0, 0.406737, 0.913545, 0, 0, 0, 1, 0.301507, -0.400413, -0.255909)
target_position = Vector3(0, -5, 0)

[node name="FrontRight2" type="RayCast3D" parent="."]
transform = Transform3D(0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 0, 0, 1, -0.551763, -0.400413, -0.255909)
target_position = Vector3(0, -5, 0)

[node name="FrontLeft3" type="RayCast3D" parent="."]
transform = Transform3D(0.913545, -0.406737, 0, 0.406737, 0.913545, 0, 0, 0, 1, 0.301507, -0.400413, -0.578267)
target_position = Vector3(0, -5, 0)

[node name="FrontRight3" type="RayCast3D" parent="."]
transform = Transform3D(0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 0, 0, 1, -0.551763, -0.400413, -0.578267)
target_position = Vector3(0, -5, 0)

[node name="FrontLeft4" type="RayCast3D" parent="."]
transform = Transform3D(0.913545, -0.406737, 0, 0.406737, 0.913545, 0, 0, 0, 1, 0.301507, -0.400413, -0.903148)
target_position = Vector3(0, -5, 0)

[node name="FrontRight4" type="RayCast3D" parent="."]
transform = Transform3D(0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 0, 0, 1, -0.551763, -0.400413, -0.903148)
target_position = Vector3(0, -5, 0)

[node name="FrontLeft5" type="RayCast3D" parent="."]
transform = Transform3D(0.913545, -0.406737, 0, 0.406737, 0.913545, 0, 0, 0, 1, 0.314708, -0.400534, -1.2274)
target_position = Vector3(0, -5, 0)

[node name="FrontRight5" type="RayCast3D" parent="."]
transform = Transform3D(0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 0, 0, 1, -0.562864, -0.400534, -1.2274)
target_position = Vector3(0, -5, 0)

[node name="FrontLeft6" type="RayCast3D" parent="."]
transform = Transform3D(0.913545, -0.406737, 0, 0.406737, 0.913545, 0, 0, 0, 1, 0.314708, -0.400534, -1.55031)
target_position = Vector3(0, -5, 0)

[node name="FrontRight6" type="RayCast3D" parent="."]
transform = Transform3D(0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 0, 0, 1, -0.562864, -0.400534, -1.55031)
target_position = Vector3(0, -5, 0)

[node name="FrontLeft7" type="RayCast3D" parent="."]
transform = Transform3D(0.913545, -0.406737, 0, 0.406737, 0.913545, 0, 0, 0, 1, 0.314708, -0.400534, -1.87689)
target_position = Vector3(0, -5, 0)

[node name="FrontRight7" type="RayCast3D" parent="."]
transform = Transform3D(0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 0, 0, 1, -0.562864, -0.400534, -1.87689)
target_position = Vector3(0, -5, 0)

[node name="GroundCollider" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.118024, -0.362103, 0.0669928)
target_position = Vector3(0, -5, 0)
